--- a/css/carrinho.css
+++ b/css/carrinho.css
@@ -152,3 +152,19 @@ input[type=number] {
         padding: 8px 15px;
     }
 }
+     #modalPagamento {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.7);
+            justify-content: center;
+            align-items: center;
+            z-index: 999;
+        }
+
+        #modalPagamento.show {
+            display: flex;
+        }
